# magic-lantern

./: .gitignore  LICENSE  README-DEV.md  README.md  example.toml  photos.py  pyproject.toml  requirements.txt  screen.py  slideshow.py
docs/: README-DEV.md  build_instructions.md  design.md  example.toml  linux_tips.md  pygame.md  tips.md
src/magic_lantern/: __init__.py  __main__.py  album.py  cli.py  config.py  controller.py  log.py  pdf.py  photo.py  screen.py  signal.py  slide.py  slideshow.py  snafu.py  text.py  watchdog.py
src/slideshow/: __init__.py  __main__.py  album.py  cli.py  config.py  controller.py  pdf.py  photo.py  screen.py  text.py
tests/: bad.toml  example 1.toml  example 2.toml  example 3.toml  example.toml  magic-lantern.sh  ml  test_config.py  ubuntu.toml
tests/configs/: slideshow.toml
tests/images/numbers/: credits.txt
