[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "magic-lantern"
version = "0.0.1"
readme = "README.md"
dependencies = [
  'click',
  'pillow',
  'pygame',
  'exifread',
  'pymupdf'
]

[tool.hatch.build.targets.wheel]
packages = ["src/magic_lantern"]

[project.scripts]
magic-lantern = "magic_lantern:cli"
